<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inputNameHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inputSurnameHint"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/inputAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inputAgeHint"
        android:inputType="number"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="55dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radialButtonMen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layoutDirection="ltr"
                android:text="@string/radialButtonMen" />

            <RadioButton
                android:id="@+id/radialButtonWomen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radialButtonWomen" />

        </RadioGroup>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerCivilStatus"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="40dp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewHijos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/switchHijos"
            android:textAlignment="center" />

        <Switch
            android:id="@+id/switchHijos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/switchHijosRespuesta"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonResumen"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:text="@string/ResumenInfo" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_notification_clear_all" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultadoResumen"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:text=" "
        android:textStyle="bold" />

</LinearLayout>